# icd-code-diagnosis

./: .env  icd-code-identifier.py  icd-code-identifier1.py  ocr_extraction.py  pdf_extraction.py  pdf_extraction1.py  pyproject.toml  requirements.txt
sample-files/: DE-ID DOC019.txt  DE-ID DOC026.txt  DE_ID DOC026.txt  Results.md
